WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64410
ApplicationCache Quota Output is Flakey
https://bugs.webkit.org/show_bug.cgi?id=64410
Summary
ApplicationCache Quota Output is Flakey
Joseph Pecoraro
Reported
2011-07-12 16:48:45 PDT
I'll skip these for now and then attempt fixing this cleanly for the different ports that implement them.
Attachments
[PATCH] Starting Point
(836 bytes, patch)
2011-07-12 17:51 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
[PATCH] Truncate space needed to ten thousands
(11.19 KB, patch)
2011-07-12 21:40 PDT
,
Joseph Pecoraro
ap
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2011-07-12 16:49:21 PDT
http://build.webkit.org/results/Qt%20Linux%20Release/r90859%20(35272)/results.html
Joseph Pecoraro
Comment 2
2011-07-12 17:09:18 PDT
Skipped the tests temporarily in:
http://trac.webkit.org/changeset/90870
I didn't think printing out the exact number of bytes was safe, but I thought the same code was shared in WebCore. First, I need to fix the printf format in DumpRenderTreeQt, then I should make printing the number of bytes more robust.
Joseph Pecoraro
Comment 3
2011-07-12 17:48:57 PDT
Adding some Qt developers involved in adding ApplicationCache Quotas for Qt. Now, back to the drawing board.
Joseph Pecoraro
Comment 4
2011-07-12 17:51:45 PDT
Created
attachment 100598
[details]
[PATCH] Starting Point For starters, I put the newline in the wrong spot and then replaced it with a space. This patch puts the newline in the right spot. But that still doesn't handle the # of bytes being different, which is probably brittle to begin with. I'm going to investigate that a bit more.
Joseph Pecoraro
Comment 5
2011-07-12 20:44:31 PDT
estimatedSizeInStorage includes some HTTP response data, which of course could vary with each request and across platforms. I can't include the # directly.
Joseph Pecoraro
Comment 6
2011-07-12 20:56:08 PDT
Skipped on platform/mac as well. <
http://trac.webkit.org/changeset/90883
> I had missed one test on run-webkit-tests after a rename as well. I'd still like some value in these tests. Maybe approximating to 10000 bytes would work? Instead of 31003*bytes something "like ~30000 bytes" would work. Or just not printing any number...
Joseph Pecoraro
Comment 7
2011-07-12 21:40:47 PDT
Created
attachment 100623
[details]
[PATCH] Truncate space needed to ten thousands
Joseph Pecoraro
Comment 8
2011-07-12 23:37:20 PDT
Comment on
attachment 100623
[details]
[PATCH] Truncate space needed to ten thousands View in context:
https://bugs.webkit.org/attachment.cgi?id=100623&action=review
bdash pointed out a grammar mistake.
> Tools/DumpRenderTree/mac/UIDelegate.mm:173 > + // Rounding up or down down not really matter for these tests. Its
I will fix this "up or down down" => "up or down" when landing.
> Tools/DumpRenderTree/qt/DumpRenderTreeQt.cpp:1046 > + // Rounding up or down down not really matter for these tests. Its
I will fix this "up or down down" => "up or down" when landing.
Joseph Pecoraro
Comment 9
2011-07-13 14:42:15 PDT
Landed in <
http://trac.webkit.org/changeset/90946
>. Watching the bots.
Joseph Pecoraro
Comment 10
2011-07-13 14:48:23 PDT
Caught this early: <
http://trac.webkit.org/changeset/90951
> That "\n" is going to be the end of me. I've already moved it, removed it, and now forgotten to add it. Sorry about all of the churn related to this.
Joseph Pecoraro
Comment 11
2011-07-13 15:58:14 PDT
This now looks good on Qt and Mac. Yay!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug